objects/LG_Application__e.object
<CustomObject>
    <description>Platform Event to capture all status changes around LG Applications.</description>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Record ID of Application.</description>
        <label>Application ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status_Description__c</fullName>
        <description>Human friendly description for Status of Application.</description>
        <label>Application Status Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status_Modified__c</fullName>
        <description>Datetime of Status change.</description>
        <label>Application Status Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Status for given Application</description>
        <label>Application Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Field for LG Broker Portal to identify the type of Event.</description>
        <label>Event Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>&apos;LG&quot;</description>
        <label>Line of Business</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_TIN__c</fullName>
        <description>Parent broker party.</description>
        <label>Parent TIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_TIN__c</fullName>
        <description>Payee broker party.</description>
        <label>Payee TIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>US State two char abbreviated.</description>
        <label>State</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writing_TIN__c</fullName>
        <description>Writing broker party.</description>
        <label>Writing TIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>LG Application</label>
    <pluralLabel>LG Applications</pluralLabel>
</CustomObject>